.k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mypizza-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mypizza
  template:
    metadata:
      labels:
        app: mypizza
    spec:
      containers:
      - name: mypizza
        image: k4mus/mypizza:latest
        ports:
        - containerPort: 8000
