.k8s/04_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mypizza
spec:
  selector:
    app: mypizza
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
