.k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mypizza
spec:
  type: NodePort
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
  selector:
    app: mypizza
