.k8s/05_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mypizza-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: mypizza.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mypizza-service
                port:
                  number: 80
